--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Chinese Restaurant Backend",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server.js"
+		"start": "node server.js"
 	},
 	"author": "Jiahang Li, Stephan Randle, Chris Basham",
 	"license": "ISC",
