--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "express-chinese-restaurant",
+	"name": "express-notes",
 	"version": "1.0.0",
 	"description": "Chinese Restaurant Backend",
 	"main": "server.js",
